--- a/src/GroupChatExample.Helper/GroupChatExample.Helper.csproj
+++ b/src/GroupChatExample.Helper/GroupChatExample.Helper.csproj
@@ -9,7 +9,10 @@
 		<ProjectReference Include="..\GroupChatExample.DotnetInteractiveService\GroupChatExample.DotnetInteractiveService.csproj" />
 		<ProjectReference Include="..\GroupChatExample.SourceGenerator\GroupChatExample.SourceGenerator.csproj">
 			<IncludeAssets>all</IncludeAssets>
+			<OutputItemType>Analyzer</OutputItemType>
+			<ReferenceOutputAssembly>true</ReferenceOutputAssembly>
 		</ProjectReference>
+		<ProjectReference Include="..\GroupChatExample.SourceGenerator\GroupChatExample.SourceGenerator.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="true" />
 		<PackageReference Include="Azure.AI.OpenAI" Version="$(AzureOpenAIVersion)" />
 	</ItemGroup>
 
