--- a/src/AgentChat.CoderRunner/AgentChat.CoderRunner.csproj
+++ b/src/AgentChat.CoderRunner/AgentChat.CoderRunner.csproj
@@ -9,9 +9,9 @@
   </PropertyGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\AgentChat.Core\AgentChat.Core.csproj" />
 		<ProjectReference Include="..\AgentChat.DotnetInteractiveService\AgentChat.DotnetInteractiveFunction.csproj" />
-		<ProjectReference Include="..\AgentChat.SourceGenerator\AgentChat.SourceGenerator.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="true" />
+		<ProjectReference Include="..\AgentChat.Example.Share\AgentChat.Example.Share.csproj" />
+		<ProjectReference Include="..\AgentChat.GPT\AgentChat.GPT.csproj" />
 	</ItemGroup>
 
 </Project>
