--- a/src/AgentChat.CoderRunnerExamplar/AgentChat.CoderRunnerExamplar.csproj
+++ b/src/AgentChat.CoderRunnerExamplar/AgentChat.CoderRunnerExamplar.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -9,8 +9,9 @@
   </PropertyGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\AgentChat.Core\AgentChat.Core.csproj" />
 		<ProjectReference Include="..\AgentChat.DotnetInteractiveService\AgentChat.DotnetInteractiveFunction.csproj" />
+		<ProjectReference Include="..\AgentChat.Example.Share\AgentChat.Example.Share.csproj" />
+		<ProjectReference Include="..\AgentChat.GPT\AgentChat.GPT.csproj" />
 		<ProjectReference Include="..\AgentChat.SourceGenerator\AgentChat.SourceGenerator.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="true" />
 	</ItemGroup>
 
