--- a/.github/workflows/nightly-build.yml
+++ b/.github/workflows/nightly-build.yml
@@ -22,9 +22,9 @@ jobs:
     - name: Restore dependencies
       run: dotnet restore
     - name: Build
-      run: dotnet build --no-restore -p:VersionSuffix=-$GITHUB_RUN_ID --configuration '${{ env.BUILD_CONFIGURATION }}'
+      run: dotnet build --no-restore -p:VersionSuffix=$GITHUB_RUN_ID --configuration '${{ env.BUILD_CONFIGURATION }}'
     - name: Pack
-      run: dotnet pack --no-restore -p:VersionSuffix=-$GITHUB_RUN_ID --no-build --configuration '${{ env.BUILD_CONFIGURATION }}' --output ./artifacts
+      run: dotnet pack --no-restore -p:VersionSuffix=$GITHUB_RUN_ID --no-build --configuration '${{ env.BUILD_CONFIGURATION }}' --output ./artifacts
     - name: Publish
       run: dotnet nuget push --source github --api-key ${{ secrets.PAT }} ./artifacts/*.nupkg --skip-duplicate
       env:
