--- a/.github/workflows/nightly-build.yml
+++ b/.github/workflows/nightly-build.yml
@@ -16,8 +16,6 @@ jobs:
       uses: actions/setup-dotnet@v3
       with:
         global-json-file: global.json
-      env:
-        NUGET_AUTH_TOKEN: ${{ secrets.PAT }}
 
     - name: Restore dependencies
       run: dotnet restore
@@ -25,7 +23,7 @@ jobs:
       run: dotnet build --no-restore -p:VersionSuffix=$GITHUB_RUN_ID --configuration '${{ env.BUILD_CONFIGURATION }}'
     - name: Pack
       run: dotnet pack --no-restore -p:VersionSuffix=$GITHUB_RUN_ID --no-build --configuration '${{ env.BUILD_CONFIGURATION }}' --output ./artifacts
-    - name: Publish
+    - name: Publish to GitHub Packages
       run: dotnet nuget push --source github --api-key ${{ secrets.PAT }} ./artifacts/*.nupkg --skip-duplicate
-      env:
-        NUGET_AUTH_TOKEN: ${{ secrets.PAT }}
+    - name: Publish to MyGet
+      run: dotnet nuget push --source myget --api-key ${{ secrets.MYGET_API_KEY }} ./artifacts/*.nupkg --skip-duplicate
