--- a/src/AgentChat.Example.Share/AgentChat.Example.Share.csproj
+++ b/src/AgentChat.Example.Share/AgentChat.Example.Share.csproj
@@ -1,8 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <Description>Helper package for AgentChat examples and notebooks</Description>
     <TargetFramework>netstandard2.0</TargetFramework>
-	<IsPackable>false</IsPackable>
   </PropertyGroup>
 
   <ItemGroup>
