--- a/src/AgentChat.SourceGenerator/AgentChat.SourceGenerator.csproj
+++ b/src/AgentChat.SourceGenerator/AgentChat.SourceGenerator.csproj
@@ -18,6 +18,9 @@
 	<ItemGroup>
 		<PackageReference Include="System.CodeDom" Version="$(SystemCodeDomVersion)" />
 		<PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" Version="$(MicrosoftCodeAnalysisVersion)" PrivateAssets="all" GeneratePathProperty="True" />
+		<PackageReference Include="System.Text.Json" Version="7.0.3">
+			<PrivateAssets>all</PrivateAssets>
+		</PackageReference>
 	</ItemGroup>
 
 
