--- a/src/AgentChat.Core/AgentChat.Core.csproj
+++ b/src/AgentChat.Core/AgentChat.Core.csproj
@@ -2,6 +2,7 @@
 	<PropertyGroup>
 		<TargetFramework>netstandard2.0</TargetFramework>
 		<Description>AgentChat core library.</Description>
+		<Nullable>enable</Nullable>
 	</PropertyGroup>
 
 	<ItemGroup>
