--- a/NuGet.config
+++ b/NuGet.config
@@ -5,6 +5,7 @@
     <add key="nuget.org" value="https://api.nuget.org/v3/index.json" />
     <add key="myget" value="https://www.myget.org/F/agentchat/api/v3/index.json" />
     <add key="dotnet-tools" value="https://pkgs.dev.azure.com/dnceng/public/_packaging/dotnet-tools/nuget/v3/index.json" />
+    <add key="local" value="artifacts" />
   </packageSources>
   <disabledPackageSources />
 </configuration>
