--- a/.github/workflows/run-openai-test-and-notebooks.yml
+++ b/.github/workflows/run-openai-test-and-notebooks.yml
@@ -28,6 +28,8 @@ jobs:
       run: dotnet pack --no-restore -p:VersionSuffix=$GITHUB_RUN_ID --no-build --configuration '${{ env.BUILD_CONFIGURATION }}' --output ./artifacts
     - name: run all tests
       run: dotnet test --no-restore --no-build --configuration '${{ env.BUILD_CONFIGURATION }}'
+    - name: Add local feed
+      run: dotnet nuget add source --name local artifacts --configfile NuGet.config
     - name: Perform a Pester test from the .tools/run_all_notebooks.ps1
       shell: pwsh
       run: |
