--- a/.github/workflows/run-openai-test-and-notebooks.yml
+++ b/.github/workflows/run-openai-test-and-notebooks.yml
@@ -9,7 +9,7 @@ env:
 
 jobs:
   build:
-    name: nightly-build
+    name: run-openai-test-and-notebooks
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
@@ -28,6 +28,10 @@ jobs:
       run: dotnet pack --no-restore -p:VersionSuffix=$GITHUB_RUN_ID --no-build --configuration '${{ env.BUILD_CONFIGURATION }}' --output ./artifacts
     - name: run all tests
       run: dotnet test --no-restore --no-build --configuration '${{ env.BUILD_CONFIGURATION }}'
+      env:
+        AZURE_OPENAI_API_KEY: ${{ secrets.AZURE_OPENAI_API_KEY }}
+        AZURE_OPENAI_ENDPOINT: ${{ secrets.AZURE_OPENAI_ENDPOINT }}
+        AZURE_GPT_35_MODEL_ID: ${{ secrets.AZURE_GPT_35_MODEL_ID }}
     - name: Add local feed
       run: dotnet nuget add source --name local artifacts --configfile NuGet.config
     - name: Perform a Pester test from the .tools/run_all_notebooks.ps1
