--- a/.github/workflows/nightly-build.yml
+++ b/.github/workflows/nightly-build.yml
@@ -12,7 +12,8 @@ env:
 jobs:
   build:
     name: nightly-build
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
+    # if success and branch is main
+    if: ${{ github.event.workflow_run.conclusion == 'success' && github.event.workflow_run.head_branch == 'main' }}
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
