--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -3,10 +3,11 @@
   <Import Project="./eng/Version.props" />
   <Import Project="./eng/MetaInfo.props" />
   <PropertyGroup>
-        <LangVersion>preview</LangVersion>
+      <LangVersion>preview</LangVersion>
 	    <Nullable>enable</Nullable>
       <SignAssembly>True</SignAssembly>
       <DelaySign>false</DelaySign>
     <AssemblyOriginatorKeyFile>$(MSBuildThisFileDirectory)eng/opensource.snk</AssemblyOriginatorKeyFile>
+    <NoWarn>$(NoWarn);NU5104</NoWarn>
   </PropertyGroup>
 </Project>
