--- a/src/AgentChat.Core/AgentChat.Core.csproj
+++ b/src/AgentChat.Core/AgentChat.Core.csproj
@@ -2,7 +2,8 @@
 	<PropertyGroup>
 		<TargetFramework>netstandard2.0</TargetFramework>
 		<Description>AgentChat core library.</Description>
-		<Nullable>enable</Nullable>
+		<TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+		<RootNamespace>AgentChat</RootNamespace>
 	</PropertyGroup>
 
 	<ItemGroup>
