--- a/.github/workflows/nightly-build.yml
+++ b/.github/workflows/nightly-build.yml
@@ -1,19 +1,14 @@
 name: nightly-build
 
 on:
-  workflow_run:
-    workflows:
-      - 'run-openai-test-and-notebooks'
-    types:
-      - completed
+  push:
+    branches: [ "main" ]
 env:
   BUILD_CONFIGURATION: Release    # set this to the appropriate build configuration
 
 jobs:
   build:
     name: nightly-build
-    # if success and branch is main
-    if: ${{ github.event.workflow_run.conclusion == 'success' && github.event.workflow_run.head_branch == 'main' }}
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
