--- a/src/AgentChat.DotnetInterpreter/AgentChat.DotnetInterpreter.csproj
+++ b/src/AgentChat.DotnetInterpreter/AgentChat.DotnetInterpreter.csproj
@@ -11,7 +11,7 @@
 	<ItemGroup>
 		<ProjectReference Include="..\AgentChat.DotnetInteractiveService\AgentChat.DotnetInteractiveFunction.csproj" />
 		<ProjectReference Include="..\AgentChat.Example.Share\AgentChat.Example.Share.csproj" />
-		<ProjectReference Include="..\AgentChat.GPT\AgentChat.GPT.csproj" />
+		<ProjectReference Include="..\AgentChat.GPT\AgentChat.OpenAI.csproj" />
 
 		<ProjectReference Include="..\AgentChat.SourceGenerator\AgentChat.SourceGenerator.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="true" />
 	</ItemGroup>
