--- a/src/AgentChat.Example.Share/AgentChat.Example.Share.csproj
+++ b/src/AgentChat.Example.Share/AgentChat.Example.Share.csproj
@@ -7,7 +7,12 @@
 
   <ItemGroup>
     <ProjectReference Include="..\AgentChat.Core\AgentChat.Core.csproj" />
-    <ProjectReference Include="..\AgentChat.GPT\AgentChat.GPT.csproj" />
+    <ProjectReference Include="..\AgentChat.GPT\AgentChat.OpenAI.csproj" />
+	  <ProjectReference Include="..\AgentChat.SourceGenerator\AgentChat.SourceGenerator.csproj">
+		  <IncludeAssets>all</IncludeAssets>
+		  <OutputItemType>Analyzer</OutputItemType>
+		  <ReferenceOutputAssembly>true</ReferenceOutputAssembly>
+	  </ProjectReference>
   </ItemGroup>
 
 </Project>
