--- a/src/AgentChat.DotnetInteractiveService/AgentChat.DotnetInteractiveFunction.csproj
+++ b/src/AgentChat.DotnetInteractiveService/AgentChat.DotnetInteractiveFunction.csproj
@@ -19,7 +19,7 @@
 
 	<ItemGroup>
 		<ProjectReference Include="..\AgentChat.Core\AgentChat.Core.csproj" />
-		<ProjectReference Include="..\AgentChat.GPT\AgentChat.OpenAI.csproj" />
+		<ProjectReference Include="..\AgentChat.OpenAI\AgentChat.OpenAI.csproj" />
 		<ProjectReference Include="..\AgentChat.SourceGenerator\AgentChat.SourceGenerator.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="true" />
 	</ItemGroup>
 
