Remove Azure.AI.OpenAI dependency from agentchat.core (#18)
* remove Azure.AI.OpenAI dependency

* rename AgentChat.GPT -> AgentChat.OpenAI

* remove local

--- a/src/AgentChat.CoderRunner/AgentChat.CoderRunner.csproj
+++ b/src/AgentChat.CoderRunner/AgentChat.CoderRunner.csproj
@@ -11,7 +11,7 @@
 	<ItemGroup>
 		<ProjectReference Include="..\AgentChat.DotnetInteractiveService\AgentChat.DotnetInteractiveFunction.csproj" />
 		<ProjectReference Include="..\AgentChat.Example.Share\AgentChat.Example.Share.csproj" />
-		<ProjectReference Include="..\AgentChat.GPT\AgentChat.GPT.csproj" />
+		<ProjectReference Include="..\AgentChat.OpenAI\AgentChat.OpenAI.csproj" />
 	</ItemGroup>
 
 </Project>
