use a flag to determine if generate json

--- a/src/AgentChat.SourceGenerator/AgentChat.SourceGenerator.csproj
+++ b/src/AgentChat.SourceGenerator/AgentChat.SourceGenerator.csproj
@@ -32,6 +32,11 @@
 			  Pack="true"
 			  PackagePath="analyzers/dotnet/cs"
 			  Visible="false" />
+		<!-- Package the props file -->
+		<None Include="AgentChat.SourceGenerator.props"
+			  Pack="true"
+			  PackagePath="build"
+			  Visible="false" />
 	</ItemGroup>
 
 	<Target Name="GetDependencyTargetPaths">
