--- a/src/AgentChat.OpenAI.Tests/AgentChat.OpenAI.Tests.csproj
+++ b/src/AgentChat.OpenAI.Tests/AgentChat.OpenAI.Tests.csproj
@@ -1,11 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <OutputType>Exe</OutputType>
-    <TargetFramework>net6.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
+	<PropertyGroup>
+		<OutputType>Exe</OutputType>
+		<TargetFramework>net6.0</TargetFramework>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<Nullable>enable</Nullable>
+	</PropertyGroup>
 
 	<ItemGroup>
 		<PackageReference Include="ApprovalTests" Version="$(ApprovalTestVersion)" />
@@ -17,11 +17,11 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<ProjectReference Include="..\AgentChat.Core.Tests\AgentChat.Core.Tests.csproj" />
 		<ProjectReference Include="..\AgentChat.DotnetInteractiveService\AgentChat.DotnetInteractiveFunction.csproj" />
 		<ProjectReference Include="..\AgentChat.Example.Share\AgentChat.Example.Share.csproj" />
-		<ProjectReference Include="..\AgentChat.SourceGenerator\AgentChat.SourceGenerator.csproj"
-						  OutputItemType="Analyzer"
-						  ReferenceOutputAssembly="true" />
+		<ProjectReference Include="..\AgentChat.OpenAI\AgentChat.OpenAI.csproj" />
+		<ProjectReference Include="..\AgentChat.SourceGenerator\AgentChat.SourceGenerator.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="true" />
 	</ItemGroup>
 
 </Project>
