--- a/.github/workflows/run-openai-test-and-notebooks.yml
+++ b/.github/workflows/run-openai-test-and-notebooks.yml
@@ -32,6 +32,8 @@ jobs:
         AZURE_OPENAI_API_KEY: ${{ secrets.AZURE_OPENAI_API_KEY }}
         AZURE_OPENAI_ENDPOINT: ${{ secrets.AZURE_OPENAI_ENDPOINT }}
         AZURE_GPT_35_MODEL_ID: ${{ secrets.AZURE_GPT_35_MODEL_ID }}
+        OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+
     - name: Add local feed
       run: dotnet nuget add source --name local artifacts --configfile NuGet.config
     - name: Perform a Pester test from the .tools/run_all_notebooks.ps1
@@ -42,4 +44,5 @@ jobs:
         AZURE_OPENAI_API_KEY: ${{ secrets.AZURE_OPENAI_API_KEY }}
         AZURE_OPENAI_ENDPOINT: ${{ secrets.AZURE_OPENAI_ENDPOINT }}
         AZURE_GPT_35_MODEL_ID: ${{ secrets.AZURE_GPT_35_MODEL_ID }}
+        OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
       
