--- a/.github/workflows/run-openai-test-and-notebooks.yml
+++ b/.github/workflows/run-openai-test-and-notebooks.yml
@@ -1,7 +1,7 @@
 name: run-openai-test-and-notebooks
 
 on:
-  pull_request:
+  pull_request_target:
     branches: [ "main" ]
 env:
   BUILD_CONFIGURATION: Release    # set this to the appropriate build configuration
