--- a/.github/workflows/run-openai-test-and-notebooks.yml
+++ b/.github/workflows/run-openai-test-and-notebooks.yml
@@ -12,7 +12,10 @@ jobs:
     name: run-openai-test-and-notebooks
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
+    - name: Checkout
+      uses: actions/checkout@v3
+      with:
+        ref: ${{ github.event.pull_request.head.sha }}
     - name: Setup .NET
       uses: actions/setup-dotnet@v3
       with:
