--- a/.github/workflows/run-openai-test-and-notebooks.yml
+++ b/.github/workflows/run-openai-test-and-notebooks.yml
@@ -30,7 +30,7 @@ jobs:
     - name: Pack
       run: dotnet pack --no-restore -p:VersionSuffix=$GITHUB_RUN_ID --no-build --configuration '${{ env.BUILD_CONFIGURATION }}' --output ./artifacts
     - name: run all tests
-      run: dotnet test --no-restore --no-build --configuration '${{ env.BUILD_CONFIGURATION }}'
+      run: dotnet test --no-restore --no-build --configuration '${{ env.BUILD_CONFIGURATION }}' -s ./openai.test.runsettings
       env:
         AZURE_OPENAI_API_KEY: ${{ secrets.AZURE_OPENAI_API_KEY }}
         AZURE_OPENAI_ENDPOINT: ${{ secrets.AZURE_OPENAI_ENDPOINT }}
