Migrated to Net8.0, Fixes, Code Cleanup
Migrated the projects to Net 8.0.
Updated to latest packages
Fixed some issues that appeared in source generator
Solution wide code cleanup

--- a/src/AgentChat.Example.Share/AgentChat.Example.Share.csproj
+++ b/src/AgentChat.Example.Share/AgentChat.Example.Share.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <Description>Helper package for AgentChat examples and notebooks</Description>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
   </PropertyGroup>
 	
   <ItemGroup>
