--- a/src/AgentChat.Core.Tests/AgentChat.Core.Tests.csproj
+++ b/src/AgentChat.Core.Tests/AgentChat.Core.Tests.csproj
@@ -2,26 +2,31 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net7.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
-	<ItemGroup>
-		<PackageReference Include="ApprovalTests" Version="$(ApprovalTestVersion)" />
-		<PackageReference Include="FluentAssertions" Version="$(FluentAssertionVersion)" />
-		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="$(MicrosoftNETTestSdkVersion)" />
-		<PackageReference Include="xunit" Version="$(XUnitVersion)" />
-		<PackageReference Include="xunit.runner.console" Version="$(XUnitVersion)" />
-		<PackageReference Include="xunit.runner.visualstudio" Version="$(XUnitVersion)" />
-	</ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="ApprovalTests" Version="6.0.0" />
+    <PackageReference Include="FluentAssertions" Version="6.12.0" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
+    <PackageReference Include="xunit" Version="2.6.4" />
+    <PackageReference Include="xunit.runner.console" Version="2.6.4">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.5.6">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
 
-	<ItemGroup>
-		<ProjectReference Include="..\AgentChat.DotnetInteractiveService\AgentChat.DotnetInteractiveFunction.csproj" />
-		<ProjectReference Include="..\AgentChat.Example.Share\AgentChat.Example.Share.csproj" />
-		<ProjectReference Include="..\AgentChat.SourceGenerator\AgentChat.SourceGenerator.csproj"
-						  OutputItemType="Analyzer"
-						  ReferenceOutputAssembly="true" />
-	</ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\AgentChat.DotnetInteractiveService\AgentChat.DotnetInteractiveFunction.csproj" />
+    <ProjectReference Include="..\AgentChat.Example.Share\AgentChat.Example.Share.csproj" />
+    <ProjectReference Include="..\AgentChat.SourceGenerator\AgentChat.SourceGenerator.csproj" OutputItemType="Analyzer"
+                      ReferenceOutputAssembly="true" />
+  </ItemGroup>
 
 </Project>
