--- a/src/AgentChat.Core/AgentChat.Core.csproj
+++ b/src/AgentChat.Core/AgentChat.Core.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
-		<TargetFramework>netstandard2.0</TargetFramework>
+		<TargetFramework>net8.0</TargetFramework>
 		<Description>AgentChat core library.</Description>
 		<TreatWarningsAsErrors>true</TreatWarningsAsErrors>
 		<RootNamespace>AgentChat</RootNamespace>
