--- a/src/AgentChat.SourceGenerator/AgentChat.SourceGenerator.csproj
+++ b/src/AgentChat.SourceGenerator/AgentChat.SourceGenerator.csproj
@@ -4,12 +4,13 @@
     <TargetFramework>netstandard2.0</TargetFramework>
 	<IncludeBuildOutput>false</IncludeBuildOutput>
 	<!-- Do not include the generator as a lib dependency -->
-	<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+	<GeneratePackageOnBuild Condition="'$(Configuration)' == 'Release'">true</GeneratePackageOnBuild>
 	<!-- Do not include the generator as a lib dependency -->
     <UserSecretsId>35954224-b94e-4024-b0ef-7ba7cf80c0d8</UserSecretsId>
 	<GetTargetPathDependsOn>$(GetTargetPathDependsOn);GetDependencyTargetPaths</GetTargetPathDependsOn>
 	<LaunchDebugger>false</LaunchDebugger>
 	<DefineConstants Condition="'$(LaunchDebugger)' == 'true'">$(DefineConstants);LAUNCH_DEBUGGER</DefineConstants>
+	<EnforceExtendedAnalyzerRules>false</EnforceExtendedAnalyzerRules>
   </PropertyGroup>
 
 	<PropertyGroup>
@@ -17,32 +18,31 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="System.CodeDom" Version="$(SystemCodeDomVersion)" />
-		<PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" Version="$(MicrosoftCodeAnalysisVersion)" PrivateAssets="all" GeneratePathProperty="True" />
-		<PackageReference Include="Newtonsoft.Json"
-						  PrivateAssets="all"
-						  Version="12.0.1"
-						  GeneratePathProperty="true" />
+		<PackageReference Include="Microsoft.CodeAnalysis" Version="4.8.0" />
+		<PackageReference Include="Microsoft.CodeAnalysis.Analyzers" Version="3.3.4">
+		  <PrivateAssets>all</PrivateAssets>
+		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
+		<PackageReference Include="Microsoft.CodeAnalysis.NetAnalyzers" Version="8.0.0">
+		  <PrivateAssets>all</PrivateAssets>
+		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
+		<PackageReference Include="System.CodeDom" Version="8.*" />
+		<PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" Version="4.8.0" PrivateAssets="all" GeneratePathProperty="True" />
+		<PackageReference Include="Newtonsoft.Json" PrivateAssets="all" Version="13.0.3" GeneratePathProperty="true" />
 	</ItemGroup>
 
 
 	<ItemGroup>
 		<None Include="$(OutputPath)\$(AssemblyName).dll" Pack="true" PackagePath="analyzers/dotnet/cs" Visible="false" />
-		<None Include="$(PkgNewtonsoft_Json)\lib\netstandard2.0\*.dll"
-			  Pack="true"
-			  PackagePath="analyzers/dotnet/cs"
-			  Visible="false" />
+		<None Include="$(PkgNewtonsoft_Json)\lib\netstandard2.0\*.dll" Pack="true" PackagePath="analyzers/dotnet/cs" Visible="false" />
 		<!-- Package the props file -->
-		<None Include="AgentChat.SourceGenerator.props"
-			  Pack="true"
-			  PackagePath="build"
-			  Visible="false" />
+		<None Include="AgentChat.SourceGenerator.props" Pack="true" PackagePath="build" Visible="false" />
 	</ItemGroup>
 
 	<Target Name="GetDependencyTargetPaths">
 		<ItemGroup>
-			<TargetPathWithTargetPlatformMoniker Include="$(PkgNewtonsoft_Json)\lib\netstandard2.0\*.dll"
-												 IncludeRuntimeDependency="false" />
+			<TargetPathWithTargetPlatformMoniker Include="$(PkgNewtonsoft_Json)\lib\netstandard2.0\*.dll" IncludeRuntimeDependency="false" />
 		</ItemGroup>
 	</Target>
 
